--- a/07-regression1.Rmd
+++ b/07-regression1.Rmd
@@ -148,9 +148,9 @@ price should be. For the example above, we find and label the 5 nearest
 neighbours to our observation of a house that is 2000 square feet:
 
 ```{r 07-find-k3}
-nearest_neighbours <- small_sacramento %>%
-  mutate(diff = abs(2000 - sqft)) %>%
-  arrange(diff) %>%
+nearest_neighbours <- small_sacramento |>
+  mutate(diff = abs(2000 - sqft)) |>
+  arrange(diff) |>
   slice(1:5) #subset the first 5 rows
 nearest_neighbours
 ```
@@ -171,7 +171,7 @@ selling price for the new home.  Specifically, we can take the mean (or
 average) of these 5 values as our predicted value.
 
 ```{r 07-predicted-knn}
-prediction <- nearest_neighbours %>%
+prediction <- nearest_neighbours |>
   summarise(predicted = mean(price))
 prediction
 ```
@@ -252,18 +252,18 @@ predictor it is technically not necessary; there is no risk of comparing two pre
 of different scales.
 
 ```{r 07-choose-k-knn}
-sacr_recipe <- recipe(price ~ sqft, data = sacramento_train) %>%
-  step_scale(all_predictors()) %>%
+sacr_recipe <- recipe(price ~ sqft, data = sacramento_train) |>
+  step_scale(all_predictors()) |>
   step_center(all_predictors())
 
-sacr_spec <- nearest_neighbor(weight_func = "rectangular", neighbors = tune()) %>%
-  set_engine("kknn") %>%
+sacr_spec <- nearest_neighbor(weight_func = "rectangular", neighbors = tune()) |>
+  set_engine("kknn") |>
   set_mode("regression")
 
 sacr_vfold <- vfold_cv(sacramento_train, v = 5, strata = price)
 
-sacr_wkflw <- workflow() %>%
-  add_recipe(sacr_recipe) %>%
+sacr_wkflw <- workflow() |>
+  add_recipe(sacr_recipe) |>
   add_model(sacr_spec)
 sacr_wkflw
 ```
@@ -278,8 +278,8 @@ the model and returns the RMSPE for each number of neighbours.
 
 gridvals <- tibble(neighbors = seq(1, 200))
 
-sacr_results <- sacr_wkflw %>%
-  tune_grid(resamples = sacr_vfold, grid = gridvals) %>%
+sacr_results <- sacr_wkflw |>
+  tune_grid(resamples = sacr_vfold, grid = gridvals) |>
   collect_metrics()
 
 # show all the results
@@ -288,19 +288,19 @@ sacr_results
 We take the *minimum* RMSPE to find the best setting for the number of neighbours:
 ```{r 07-choose-k-knn-results-2}
 # show only the row of minimum RMSPE
-sacr_min <- sacr_results %>%
-  filter(.metric == "rmse") %>%
+sacr_min <- sacr_results |>
+  filter(.metric == "rmse") |>
   filter(mean == min(mean))
 sacr_min
 ```
-Here we can see that the smallest RMSPE occurs when $K =$ `r sacr_min %>% pull(neighbors)`.
+Here we can see that the smallest RMSPE occurs when $K =$ `r sacr_min |> pull(neighbors)`.
 
 ## Underfitting and overfitting
 Similar to the setting of classification, by setting the number of neighbours
 to be too small or too large, we cause the RMSPE to increase:
 
 ```{r 07-choose-k-knn-plot, echo = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Effect of the number of neighbours on the RMSPE"} 
-sacr_results <- sacr_results %>%
+sacr_results <- sacr_results |>
   filter(.metric == "rmse")
 
 sacr_tunek_plot <- ggplot(sacr_results, aes(x = neighbors, y = mean)) +
@@ -319,23 +319,23 @@ observed in the data set (here 500 to 4250 square feet) and we plot the
 predicted prices as a blue line:
 
 ```{r 07-howK, echo = FALSE, fig.height = 12, fig.width = 10,fig.cap = "Predicted values for house price (represented as a blue line) from K-NN regression models for six different values for $K$"}
-kmin <- sacr_min %>% pull(neighbors)
+kmin <- sacr_min |> pull(neighbors)
 gridvals <- c(1, 3, kmin, 41, 250, 450)
 
 plots <- list()
 
 for (i in 1:6) {
-  sacr_spec <- nearest_neighbor(weight_func = "rectangular", neighbors = gridvals[[i]]) %>%
-    set_engine("kknn") %>%
+  sacr_spec <- nearest_neighbor(weight_func = "rectangular", neighbors = gridvals[[i]]) |>
+    set_engine("kknn") |>
     set_mode("regression")
 
-  sacr_wkflw <- workflow() %>%
-    add_recipe(sacr_recipe) %>%
+  sacr_wkflw <- workflow() |>
+    add_recipe(sacr_recipe) |>
     add_model(sacr_spec)
 
-  sacr_preds <- sacr_wkflw %>%
-    fit(data = sacramento_train) %>%
-    predict(sacramento_train) %>%
+  sacr_preds <- sacr_wkflw |>
+    fit(data = sacramento_train) |>
+    predict(sacramento_train) |>
     bind_cols(sacramento_train)
 
   plots[[i]] <- ggplot(sacr_preds, aes(x = sqft, y = price)) +
@@ -383,7 +383,7 @@ we would like a model with low variance (so that it will transfer/generalize
 well to other data sets, and isn't too dependent on the
 observations that happen to be in the training set) **and** low bias
 (where the model does not completely ignore our training data). If we explore 
-the other values for $K$, in particular $K$ = `r sacr_min %>% pull(neighbors)`
+the other values for $K$, in particular $K$ = `r sacr_min |> pull(neighbors)`
 (as suggested by cross-validation),
 we can see it has a lower bias than our model with a very high $K$ (e.g., 450),
 and thus the model/predicted values better match the actual observed values
@@ -398,7 +398,7 @@ chapter).
 To assess how well our model might do at predicting on unseen data, we will
 assess its RMSPE on the test data. To do this, we will first
 re-train our K-NN regression model on the entire training data set, 
-using $K =$ `r sacr_min %>% pull(neighbors)` neighbours. Then we will
+using $K =$ `r sacr_min |> pull(neighbors)` neighbours. Then we will
 use `predict` to make predictions on the test data, and use the `metrics`
 function again to compute the summary of regression quality. Because
 we specify that we are performing regression in `set_mode`, the `metrics`
@@ -406,25 +406,25 @@ function knows to output a quality summary related to regression, and not, say, 
 
 ```{r 07-predict}
 set.seed(1234)
-kmin <- sacr_min %>% pull(neighbors)
-sacr_spec <- nearest_neighbor(weight_func = "rectangular", neighbors = kmin) %>%
-  set_engine("kknn") %>%
+kmin <- sacr_min |> pull(neighbors)
+sacr_spec <- nearest_neighbor(weight_func = "rectangular", neighbors = kmin) |>
+  set_engine("kknn") |>
   set_mode("regression")
 
-sacr_fit <- workflow() %>%
-  add_recipe(sacr_recipe) %>%
-  add_model(sacr_spec) %>%
+sacr_fit <- workflow() |>
+  add_recipe(sacr_recipe) |>
+  add_model(sacr_spec) |>
   fit(data = sacramento_train)
 
-sacr_summary <- sacr_fit %>%
-  predict(sacramento_test) %>%
-  bind_cols(sacramento_test) %>%
+sacr_summary <- sacr_fit |>
+  predict(sacramento_test) |>
+  bind_cols(sacramento_test) |>
   metrics(truth = price, estimate = .pred)
 
 sacr_summary
 ```
 Our final model's test error as assessed by RMSPE 
-is `r format(round(sacr_summary %>% filter(.metric == 'rmse') %>% pull(.estimate)), scientific=FALSE)`. 
+is `r format(round(sacr_summary |> filter(.metric == 'rmse') |> pull(.estimate)), scientific=FALSE)`. 
 But what does this RMSPE score mean? When we calculated test set prediction accuracy in K-NN
 classification, the highest possible value was 1 and the lowest possible value was 0. 
 If we got a value close to 1, our model was "good;" and otherwise,
@@ -445,8 +445,8 @@ along with the code that generated it:
 
 ```{r 07-predict-all, fig.height = 4, fig.width = 5, fig.cap = "Predicted values for house price (represented as a blue line) for K-NN regression model with $K = 14$"}
 set.seed(1234)
-sacr_preds <- sacr_fit %>%
-  predict(sacramento_train) %>%
+sacr_preds <- sacr_fit |>
+  predict(sacramento_train) |>
   bind_cols(sacramento_train)
 
 plot_final <- ggplot(sacr_preds, aes(x = sqft, y = price)) +
@@ -499,8 +499,8 @@ we are interested in using in our analyses:
 
 ```{r 07-ggpairs, fig.height = 5, fig.width = 6, fig.cap = "Scatterplots of each pair of variables (price, house size, and the number of bedrooms) are displayed in the figure's bottom left corner. Correlation coefficients are shown in the top right corner. The distributions of price, house size and number of bedrooms are each shown along the diagonal."}
 library(GGally)
-plot_pairs <- sacramento %>%
-  select(price, sqft, beds) %>%
+plot_pairs <- sacramento |>
+  select(price, sqft, beds) |>
   ggpairs()
 plot_pairs
 ```
@@ -511,24 +511,24 @@ First we'll build a new model specification and recipe for the analysis. Note th
 we use the formula `price ~ sqft + beds` to denote that we have two predictors,
 and set `neighbors = tune()` to tell `tidymodels` to tune the number of neighbours for us.
 ```{r 07-mult-setup}
-sacr_recipe <- recipe(price ~ sqft + beds, data = sacramento_train) %>%
-  step_scale(all_predictors()) %>%
+sacr_recipe <- recipe(price ~ sqft + beds, data = sacramento_train) |>
+  step_scale(all_predictors()) |>
   step_center(all_predictors())
 
-sacr_spec <- nearest_neighbor(weight_func = "rectangular", neighbors = tune()) %>%
-  set_engine("kknn") %>%
+sacr_spec <- nearest_neighbor(weight_func = "rectangular", neighbors = tune()) |>
+  set_engine("kknn") |>
   set_mode("regression")
 ```
 Next, we'll use 5-fold cross-validation to choose the number of neighbours via the minimum RMSPE:
 ```{r 07-mult-cv}
 gridvals <- tibble(neighbors = seq(1, 200))
-sacr_k <- workflow() %>%
-  add_recipe(sacr_recipe) %>%
-  add_model(sacr_spec) %>%
-  tune_grid(sacr_vfold, grid = gridvals) %>%
-  collect_metrics() %>%
-  filter(.metric == "rmse") %>%
-  filter(mean == min(mean)) %>%
+sacr_k <- workflow() |>
+  add_recipe(sacr_recipe) |>
+  add_model(sacr_spec) |>
+  tune_grid(sacr_vfold, grid = gridvals) |>
+  collect_metrics() |>
+  filter(.metric == "rmse") |>
+  filter(mean == min(mean)) |>
   pull(neighbors)
 sacr_k
 ```
@@ -538,17 +538,17 @@ Now that we have chosen $K$, we need to re-train the model on the entire
 training data set, and after that we can use that model to predict
 on the test data to get our test error. 
 ```{r 07-re-train}
-sacr_spec <- nearest_neighbor(weight_func = "rectangular", neighbors = sacr_k) %>%
-  set_engine("kknn") %>%
+sacr_spec <- nearest_neighbor(weight_func = "rectangular", neighbors = sacr_k) |>
+  set_engine("kknn") |>
   set_mode("regression")
 
-knn_mult_fit <- workflow() %>%
-  add_recipe(sacr_recipe) %>%
-  add_model(sacr_spec) %>%
+knn_mult_fit <- workflow() |>
+  add_recipe(sacr_recipe) |>
+  add_model(sacr_spec) |>
   fit(data = sacramento_train)
 
-knn_mult_preds <- knn_mult_fit %>%
-  predict(sacramento_test) %>%
+knn_mult_preds <- knn_mult_fit |>
+  predict(sacramento_test) |>
   bind_cols(sacramento_test)
 
 knn_mult_mets <- metrics(knn_mult_preds, truth = price, estimate = .pred)
@@ -556,9 +556,9 @@ knn_mult_mets
 ```
 This time when we performed K-NN regression on the same data set, but also
 included number of bedrooms as a predictor we obtained a RMSPE test error 
-of `r format(round(knn_mult_mets %>% filter(.metric == 'rmse') %>% pull(.estimate)), scientific=FALSE)`.
+of `r format(round(knn_mult_mets |> filter(.metric == 'rmse') |> pull(.estimate)), scientific=FALSE)`.
 This compares to a RMSPE test error 
-of  `r format(round(sacr_summary %>% filter(.metric == 'rmse') %>% pull(.estimate)), scientific=FALSE)`
+of  `r format(round(sacr_summary |> filter(.metric == 'rmse') |> pull(.estimate)), scientific=FALSE)`
 when we used only house size as the
 single predictor. Thus in this case, we did not improve the model 
 by a large amount by adding this additional predictor.
@@ -572,25 +572,25 @@ library(plotly)
 xvals <- seq(from = min(sacramento_train$sqft), to = max(sacramento_train$sqft), length = 50)
 yvals <- seq(from = min(sacramento_train$beds), to = max(sacramento_train$beds), length = 50)
 
-zvals <- knn_mult_fit %>%
-  predict(crossing(xvals, yvals) %>% mutate(sqft = xvals, beds = yvals)) %>%
+zvals <- knn_mult_fit |>
+  predict(crossing(xvals, yvals) |> mutate(sqft = xvals, beds = yvals)) |>
   pull(.pred)
 
 zvalsm <- matrix(zvals, nrow = length(xvals))
 
-plot_ly() %>%
+plot_ly() |>
   add_markers(
     data = sacramento_train,
     x = ~sqft,
     y = ~beds,
     z = ~price,
     marker = list(size = 5, opacity = 0.4, color = "red")
-  ) %>%
+  ) |>
   layout(scene = list(
     xaxis = list(title = "House size (square feet)"),
     zaxis = list(title = "Price (USD)"),
     yaxis = list(title = "Number of bedrooms")
-  )) %>%
+  )) |>
   add_surface(
     x = ~xvals,
     y = ~yvals,
